--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <item android:state_activated="true">
+        <item android:state_pressed="true">
             <shape>
                 <solid android:color="@color/blimpPrimary" />
             </shape>
         </item>
-    <item android:state_activated="false">
+    <item android:state_pressed="false">
             <shape>
-                <solid android:color="@android:color/transparent" />
+                <solid android:color="@color/colorPrimary" />
             </shape>
     </item>
 
