--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -5,27 +5,11 @@
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    card_view:cardUseCompatPadding="false"
-    android:background="@drawable/selector"
-    android:layout_marginBottom="16dp">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+    card_view:cardUseCompatPadding="true">
 
         <ImageView
             android:id="@+id/galleryActivity_photoiMageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:contentDescription="@string/action_settings"
-            android:src="@android:drawable/ic_menu_gallery"
-            android:scaleType="centerCrop"
-            android:layout_marginBottom="2dp"
-            android:layout_marginLeft="2dp"
-
-            android:layout_marginTop="2dp"/>
-
-    </RelativeLayout>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 </android.support.v7.widget.CardView>
