--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <item android:state_pressed="true">
+        <item android:state_selected="true" >
             <shape>
                 <solid android:color="@color/blimpPrimary" />
             </shape>
         </item>
-    <item android:state_pressed="false">
+    <item android:state_selected="false">
             <shape>
-                <solid android:color="@color/colorPrimary" />
+                <solid android:color="@android:color/transparent" />
             </shape>
     </item>
+    <!--<item android:state_activated="true" android:drawable="@color/blimpPrimary" />-->
+    <!--<item android:drawable="@android:color/transparent" />-->
 
 </selector>
