--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -5,11 +5,18 @@
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardUseCompatPadding="true"
+    android:background="?android:attr/activatedBackgroundIndicator">
 
-        <ImageView
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/selector">
+
+    <ImageView
             android:id="@+id/galleryActivity_photoiMageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
