--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <item android:state_selected="true" >
+        <item android:state_pressed="true" android:state_selected="true" android:state_activated="true">
             <shape>
                 <solid android:color="@color/blimpPrimary" />
             </shape>
         </item>
-    <item android:state_selected="false">
-            <shape>
-                <solid android:color="@android:color/transparent" />
-            </shape>
-    </item>
-    <!--<item android:state_activated="true" android:drawable="@color/blimpPrimary" />-->
-    <!--<item android:drawable="@android:color/transparent" />-->
+    <item android:state_pressed="true" android:drawable="@color/colorAccent" />
+    <item android:drawable="@android:color/transparent" />
+    <item android:state_activated="false" android:drawable="@android:color/transparent" />
+    <item android:state_selected="false" android:drawable="@android:color/transparent" />
+    <item android:state_pressed="false" android:drawable="@android:color/transparent" />
 
 </selector>
